[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Mob.gd" type="Script" id=2]
[ext_resource path="res://assets/angry-face.png" type="Texture" id=3]
[ext_resource path="res://scenes/MobBullet.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="Mob" instance=ExtResource( 1 )]
script = ExtResource( 2 )
MobBullet = ExtResource( 4 )

[node name="Sprite" parent="." index="1"]
texture = ExtResource( 3 )

[node name="CollisionArea" parent="." index="2" groups=[
"mob",
]]

[node name="CollisionShape2D" parent="CollisionArea" index="0"]
shape = SubResource( 1 )
[connection signal="mob_die" from="." to="." method="_on_Mob_mob_die"]
[connection signal="area_entered" from="CollisionArea" to="." method="_on_CollisionArea_area_entered"]
